--- a/Week2/DSF_2Week_Python.ipynb
+++ b/Week2/DSF_2Week_Python.ipynb
@@ -43,9 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "5\n",
+      "5.1\n",
+      "True\n",
+      "50\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World!\")\n",
     "print(5)\n",
@@ -63,9 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give me some space.\n",
+      "The current year is 2021\n",
+      "Jake is 5 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Give\", \"me\", \"some\", \"space.\")\n",
     "\n",
@@ -266,9 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Återvänd till apa.\n"
+     ]
+    }
+   ],
    "source": [
     "fake_language = \"Återvänd\" + \" till\" + \" apa.\"\n",
     "print(fake_language)"
@@ -413,11 +443,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  Andrea\n",
+      "Age:  26\n",
+      "Height:  175.0\n",
+      "Favorite animal:  Penguin\n"
+     ]
+    }
+   ],
    "source": [
-    "# enter your code here!"
+    "# enter your code here!\n",
+    "exercise_list = [\"Andrea\", 26, 175.0, \"Tiger\"]\n",
+    "exercise_list[3] = \"Penguin\"\n",
+    "print(\"Name: \",exercise_list[0])\n",
+    "print(\"Age: \",exercise_list[1])\n",
+    "print(\"Height: \",exercise_list[2])\n",
+    "print(\"Favorite animal: \",exercise_list[3])"
    ]
   },
   {
@@ -466,11 +513,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The date is 27 September 2023\n"
+     ]
+    }
+   ],
    "source": [
-    "# enter your code here!"
+    "# enter your code here!\n",
+    "exercise_dict = {}\n",
+    "exercise_dict[\"year\"] = 2023\n",
+    "exercise_dict[\"month\"] = \"September\"\n",
+    "exercise_dict[\"day\"] = 26\n",
+    "exercise_dict[\"day\"] += 1\n",
+    "\n",
+    "print(\"The date is\",exercise_dict[\"day\"],exercise_dict[\"month\"],exercise_dict[\"year\"])"
    ]
   },
   {
@@ -567,11 +629,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X is divisible by 7. Result is  434.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# enter your code here"
+    "# enter your code here\n",
+    "x = 3038\n",
+    "if x%7 == 0:\n",
+    "    print(\"X is divisible by 7. Result is \",3038/7)\n",
+    "else:\n",
+    "    print(\"X is not divisible by 7.\")"
    ]
   },
   {
@@ -594,9 +669,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "feijoa\n"
+     ]
+    }
+   ],
    "source": [
     "# create a list\n",
     "fruits = [\"apple\", \"banana\", \"feijoa\"]\n",
@@ -615,9 +700,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: Hanna Value: 4\n",
+      "Key: Markus Value: 3\n",
+      "Key: Amat Value: 5\n"
+     ]
+    }
+   ],
    "source": [
     "# create a dictionary\n",
     "scores = {\"Hanna\": 4, \"Markus\": 3, \"Amat\": 5}\n",
@@ -636,9 +731,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chicago is in USA\n",
+      "London is in England\n",
+      "Zuerich is in Switzerland\n"
+     ]
+    }
+   ],
    "source": [
     "cities = [\"Chicago\", \"London\", \"Zuerich\"]\n",
     "countries = [\"USA\", \"England\", \"Switzerland\"]\n",
@@ -656,14 +761,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'honda': 1, 'volvo': 6, 'saab': 15}\n"
+     ]
+    }
+   ],
    "source": [
     "# the dictionary\n",
     "my_dictionary = {\"honda\": 0, \"volvo\": 5, \"saab\": 14}\n",
     "\n",
-    "# enter your code here to increment each car brand by 1"
+    "# enter your code here to increment each car brand by 1\n",
+    "for i in my_dictionary:\n",
+    "    my_dictionary[i] += 1\n",
+    "\n",
+    "print(my_dictionary)"
    ]
   },
   {
@@ -678,9 +795,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate i from 0 to 9\n",
     "for i in range(10):\n",
@@ -689,9 +823,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple is at position number 0 in the list.\n",
+      "banana is at position number 1 in the list.\n",
+      "feijoa is at position number 2 in the list.\n"
+     ]
+    }
+   ],
    "source": [
     "# using an index to iterate through the fruit list\n",
     "for i in range(len(fruits)):\n",
@@ -700,9 +844,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate from 10 to 50 in steps of 5\n",
     "for i in range(10,50,5):\n",
@@ -718,11 +877,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "98\n",
+      "96\n",
+      "94\n",
+      "92\n",
+      "90\n",
+      "88\n",
+      "86\n",
+      "84\n",
+      "82\n"
+     ]
+    }
+   ],
    "source": [
-    "# enter your code here"
+    "# enter your code here\n",
+    "for i in range(100,80,-2):\n",
+    "    print(i)"
    ]
   },
   {
@@ -763,9 +941,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "emperor_name = input(\"Please enter the name of the Roman Emperor ruling between 27 BC - AD 14: \")\n",
     "while(emperor_name != \"Augustus Caesar\"):\n",
@@ -792,11 +978,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# enter your code here!"
+    "# enter your code here!\n",
+    "x = 2\n",
+    "i = 0\n",
+    "while(x<1024):\n",
+    "    x**= 2\n",
+    "    i += 1\n",
+    "print(i)"
    ]
   },
   {
@@ -850,11 +1050,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear Mr Carlo\n"
+     ]
+    }
+   ],
    "source": [
-    "# enter your code here!"
+    "# enter your code here!\n",
+    "def ex_function(string1 = \"Annina\"):\n",
+    "    if (string1[len(string1)-1] == \"a\" or string1[len(string1)-1] == \"e\"):\n",
+    "        print(\"Dear Mrs\",string1)\n",
+    "    else:\n",
+    "        print(\"Dear Mr\",string1)\n",
+    "\n",
+    "ex_function(\"Carlo\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -962,7 +1179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
