All exercises done

--- a/Week2/DSF_2Week_Python.ipynb
+++ b/Week2/DSF_2Week_Python.ipynb
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1198,8 +1198,9 @@
      "output_type": "stream",
      "text": [
       "Select your choice. Write 'rock', 'paper', or 'scissors':\n",
-      "f\n",
-      "scissors\n"
+      "Your choice: fsd\n",
+      "Computer choice: scissors\n",
+      "Invalid input, try again.\n"
      ]
     }
    ],
@@ -1214,11 +1215,25 @@
     "PC = choices[choice(0,2)]\n",
     "\n",
     "#print results\n",
+    "print(\"Your choice:\",x)\n",
+    "print(\"Computer choice:\",PC)\n",
+    "\n",
     "#comparison\n",
     "if (x == PC):\n",
-    "    print(\"same\")\n",
+    "    print(\"Draw. Try again.\")\n",
     "elif (x == \"rock\" and PC == \"scissor\"):\n",
-    "    print(\"Rock b\")"
+    "    print(\"Rock beats scissors, you won!\")\n",
+    "elif (PC == \"rock\" and x == \"scissor\"):\n",
+    "    print(\"Rock beats scissors, you lost!\")\n",
+    "elif (x == \"scissors\" and PC == \"paper\"):\n",
+    "    print(\"Scissors beat paper, you won!\")\n",
+    "elif (PC == \"scissors\" and x == \"paper\"):\n",
+    "    print(\"Scissors beat paper, you lost!\")\n",
+    "elif (x == \"paper\" and PC == \"rock\"):\n",
+    "    print(\"Paper beats rock, you won!\")\n",
+    "elif (PC == \"paper\" and x == \"rock\"):\n",
+    "    print(\"Paper beats rock, you lost!\")\n",
+    "else: print (\"Invalid input, try again.\")"
    ]
   }
  ],
