--- a/Week3/data_sources_formats_collection.ipynb
+++ b/Week3/data_sources_formats_collection.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "[638 rows x 4 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,191 @@
     "\n",
     "df = pd.DataFrame(cursor.fetchall(), \n",
     "                  columns=['OrderId','Rooms','Area','Price'])    \n",
-    "df"
+    "df\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tables:\n",
+      "actor\n",
+      "country\n",
+      "city\n",
+      "address\n",
+      "language\n",
+      "category\n",
+      "customer\n",
+      "film\n",
+      "film_actor\n",
+      "film_category\n",
+      "film_text\n",
+      "inventory\n",
+      "staff\n",
+      "store\n",
+      "payment\n",
+      "rental\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Lastname</th>\n",
+       "      <th>Movie</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PENELOPE</td>\n",
+       "      <td>GUINESS</td>\n",
+       "      <td>ACADEMY DINOSAUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NICK</td>\n",
+       "      <td>WAHLBERG</td>\n",
+       "      <td>ACE GOLDFINGER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ED</td>\n",
+       "      <td>CHASE</td>\n",
+       "      <td>ADAPTATION HOLES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JENNIFER</td>\n",
+       "      <td>DAVIS</td>\n",
+       "      <td>AFFAIR PREJUDICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>JOHNNY</td>\n",
+       "      <td>LOLLOBRIGIDA</td>\n",
+       "      <td>AFRICAN EGG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>BELA</td>\n",
+       "      <td>WALKEN</td>\n",
+       "      <td>CRUELTY UNFORGIVEN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>REESE</td>\n",
+       "      <td>WEST</td>\n",
+       "      <td>CRUSADE HONEY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>MARY</td>\n",
+       "      <td>KEITEL</td>\n",
+       "      <td>CRYSTAL BREAKING</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>JULIA</td>\n",
+       "      <td>FAWCETT</td>\n",
+       "      <td>CUPBOARD SINNERS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>THORA</td>\n",
+       "      <td>TEMPLE</td>\n",
+       "      <td>CURTAIN VIDEOTAPE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Name      Lastname               Movie\n",
+       "0    PENELOPE       GUINESS    ACADEMY DINOSAUR\n",
+       "1        NICK      WAHLBERG      ACE GOLDFINGER\n",
+       "2          ED         CHASE    ADAPTATION HOLES\n",
+       "3    JENNIFER         DAVIS    AFFAIR PREJUDICE\n",
+       "4      JOHNNY  LOLLOBRIGIDA         AFRICAN EGG\n",
+       "..        ...           ...                 ...\n",
+       "195      BELA        WALKEN  CRUELTY UNFORGIVEN\n",
+       "196     REESE          WEST       CRUSADE HONEY\n",
+       "197      MARY        KEITEL    CRYSTAL BREAKING\n",
+       "198     JULIA       FAWCETT    CUPBOARD SINNERS\n",
+       "199     THORA        TEMPLE   CURTAIN VIDEOTAPE\n",
+       "\n",
+       "[200 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test exercise 1 with SQLite database used cars from Kaggle.com\n",
+    "\n",
+    "import sqlite3\n",
+    "import fnmatch\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Turn warnings off\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# database connection\n",
+    "conn = sqlite3.connect('test_database.db')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# show tables in the db\n",
+    "res = conn.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "print('Tables:')\n",
+    "for name in res:\n",
+    "    print(name[0])\n",
+    "\n",
+    "#SQL query\n",
+    "cursor.execute('''select actor.first_name, actor.last_name, film.title\n",
+    "                from actor\n",
+    "               inner join film on actor.actor_id=film.film_id''')\n",
+    "\n",
+    "df = pd.DataFrame(cursor.fetchall(),\n",
+    "                  columns = ['Name', 'Lastname', 'Movie'])\n",
+    "\n",
+    "df\n",
+    "\n",
+    "\n"
    ]
   },
   {
